# FORCE

./: .gitignore  README.md
components_asp/incremental/: clause.lp  formula.lp  invs.lp
components_asp/language/: DNF_epr.lp  DuoAI.lp  clause.lp  flyvy.lp  formula.lp  formula_bu.lp  k-pDNF.lp  tmp.lp  utils.lp
components_asp/redundant/: clause_level.lp  formula_level.lp
configs/: flexible_paxos_epr_0.txt  paxos_0.txt  paxos_epr_0.txt
flyvy_configs/: client_server_ae_0.txt  client_server_db_ae_0.txt  consensus_epr_0.txt  flexible_paxos.txt  flexible_paxos_0.txt  learning_switch_quad.txt  learning_switch_quad_0.txt  multi_paxos_0.txt  paxos.txt  sharded_kv_no_lost_keys_0.txt  stoppable_paxos_0.txt  ticket_lock.txt  toy_consensus_epr_0.txt
protocols/: paxos_epr.ivy
protocols/flexible_paxos_epr/: flexible_paxos_epr.ivy
protocols/paxos_epr/: paxos_epr.ivy
src-c/: .gitignore  CMakeLists.txt  Helper.cpp  Helper.h  InvRefiner.cpp  InvRefiner.h  Makefile  Solver.cpp  Solver.h  Solver2.cpp  Solver2.h  StringProcessor.cpp  StringProcessor.h  basics.cpp  basics.h  main.cpp  preprocessing.cpp
traces/client_server_db_ae_0/: 1-1-1-1.csv  1-1-1-2.csv  1-1-1-3.csv  1-1-2-1.csv  1-1-2-2.csv  1-1-2-3.csv  1-1-3-1.csv  1-1-3-2.csv  1-1-3-3.csv  1-2-1-1.csv  1-2-1-2.csv  1-2-1-3.csv  1-2-2-1.csv  1-2-2-2.csv  1-2-2-3.csv  1-2-3-1.csv  1-2-3-2.csv  1-2-3-3.csv  1-3-1-1.csv  1-3-1-2.csv  1-3-1-3.csv  1-3-2-1.csv  1-3-2-2.csv  1-3-2-3.csv  1-3-3-1.csv  1-3-3-2.csv  1-3-3-3.csv  2-1-1-1.csv  2-1-1-2.csv  2-1-1-3.csv  2-1-2-1.csv  2-1-2-2.csv  2-1-2-3.csv  2-1-3-1.csv  (+47 more)
(+1431 files in other folders)
